--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -87,3 +87,23 @@
     height: 100%;
     object-fit: cover;
 }
+
+@media screen and (max-width: 480px) {
+    .i {
+        flex-direction: column;
+    }
+
+    .i-left-wrapper {
+
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 100%;
+    }
+
+    .i-desc{
+        display: none;
+    }
+
+}
